<resources>
    <string name="app_name">AR Home</string>

    //intro page
    <string name="intro">為您的房子找到完美的家具。</string>
    <string name="start">開始</string>

    <string name="username">帳戶名字</string>
    <string name="email">電子郵件</string>
    <string name="passwd">密碼</string>

    //login page
    <string name="hello">您好！</string>
    <string name="suggestion">登錄以獲得更好的用戶體驗</string>
    <string name="login">登入</string>
    <string name="enter_email">輸入電子郵件 :</string>
    <string name="enter_passwd">輸入密碼 :</string>
    <string name="guest">遊客帳戶</string>
    <string name="fgtPwd">忘記密碼</string>

    //signup page
    <string name="join">立即加入！</string>
    <string name="signup">註冊</string>
    <string name="enter_username">輸入帳戶名字</string>
    <string name="verify_passwd">驗證密碼</string>

    //main page
    <string name="ar_tech">實施AR技術</string>
    <string name="trial">只需單擊一個按鈕，即可在您的房間中展示您的家具。</string>
    <string name="recommendation">為您推薦的家具</string>
    <string name="look_for">在找什麽？</string>
    <string name="search">search</string>

    //favorite page
    <string name="favorite">喜歡項目</string>
    <string name="ar_button">AR按鈕</string>

    //profile page
    <string name="profile">帳戶設定</string>
    <string name="logout">登出</string>

    //change username page
    <string name="chgUN">變更名字</string>

    //change password page
    <string name="chgPw">變更密碼</string>
    <string name="enter_curPw">輸入當前密碼</string>
    <string name="enter_newPw">輸入新的密碼</string>
    <string name="verNewPw">驗證新的密碼</string>
    <string name="curPw">當前密碼</string>
    <string name="newPw">新的密碼</string>

    <string name="all">全部</string>

    <string name="save">儲存</string>
    <string name="send">發送</string>
    <string name="cancel">取消</string>

    <string name="home">Home</string>
    <string name="back">Back</string>

    <string name="table">桌子</string>
    <string name="chair">椅子</string>
    <string name="sofa">沙發</string>
    <string name="bed">床</string>

    <string name="fId">Furniture ID :</string>
    <string name="fType">Type :</string>
    <string name="fColor">Color :</string>
    <string name="fStyle">Style :</string>
    <string name="fBrand">Brand :</string>
    <string name="fPhone">Phone number :</string>
    <string name="fAddress">Address :</string>
    <string name="fLoc">Location :</string>

    <string name="brand1">Ikea</string>
    <string name="brand2">Nitori</string>

    <string name="table1">Table 1</string>
    <string name="table2">Table 2</string>
    <string name="table3">Table 3</string>

    <string name="chair1">Chair 1</string>
    <string name="chair2">Chair 2</string>

    <string name="sofa1">Sofa 1</string>
    <string name="sofa2">Sofa 2</string>

    <string name="bed1">Bed 1</string>
    <string name="bed2">Bed 2</string>

    <string name="add_fv">Add to Favorite</string>
    <string name="rm_fv">Remove from Favorite</string>
    <string name="viewAr">View AR</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>