<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeUsernameFragment"
    android:background="@color/blue_main"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvChgUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        android:fontFamily="@font/kaiu"
        android:text="@string/chgUN"
        android:textSize="48sp"
        android:textColor="@color/matte_black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/kaiu"
        android:text="@string/enter_username"
        android:textColor="#3F3F3F"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        android:background="@drawable/elevated_rectangle_10"
        android:backgroundTint="@color/white"
        android:ems="15"
        android:fontFamily="@font/kaiu"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="22sp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:background="@drawable/elevated_rectangle_15"
        android:backgroundTint="@color/red_btn"
        android:fontFamily="@font/kaiu"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:background="@drawable/elevated_rectangle_15"
        android:backgroundTint="@color/orange_btn"
        android:fontFamily="@font/kaiu"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp" />

</LinearLayout>