<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/blue_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="658dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/rectangle_30"
        android:backgroundTint="@color/blue_main"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/kaiu"
            android:gravity="center_horizontal"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/baseline_email_24"
                android:contentDescription="@null"/>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="emailAddress"
                android:background="@drawable/rectangle_15"
                android:backgroundTint="@color/white"
                android:ems="15"
                android:fontFamily="@font/kaiu"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/baseline_lock_24"
                android:contentDescription="@null"/>

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="password"
                android:background="@drawable/rectangle_15"
                android:backgroundTint="@color/white"
                android:ems="15"
                android:fontFamily="@font/kaiu"
                android:hint="@string/passwd"
                android:inputType="textPassword"
                android:textSize="22sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvFgtPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/kaiu"
            android:background="@drawable/line"
            android:text="@string/fgtPwd"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_SignIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_15"
            android:backgroundTint="@color/red_btn"
            android:fontFamily="@font/kaiu"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rectangle_15"
            android:backgroundTint="@color/orange_btn"
            android:fontFamily="@font/kaiu"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>